@@ -61,11 +61,11 @@
             android:contentDescription="Edit"
             android:visibility="visible"  />
 
-        <TextView
-            android:id="@+id/tv_item_name"
+        <EditText
+            android:id="@+id/et_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nombre item 1"
+            android:hint="Nombre item"
             android:textColor="#666666"
             android:textSize="16sp" />
     </LinearLayout>
