@@ -63,3 +63,4 @@
 [2025-04-22 07:24:20]	No se encontró una version válida	Borrado de carrito --ok
 [2025-04-22 07:43:53]	No se encontró una version válida	Automatic update
 [2025-04-22 08:00:08]	No se encontró una version válida	Advertencia de `Operacion pendiente`
+[2025-04-22 19:27:52]	No se encontró una version válida	Es posible ya actualizar nombre items en vista Calc
